refactored CandidateValidator and StreamPractice classes